/* ========================= eCAL LICENSE =================================
 *
 * Copyright (C) 2016 - 2019 Continental Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ========================= eCAL LICENSE =================================
*/

/* Some word about this interface:
 * Syntax3 means some special things to take care about. The default value of a single signal is by default 0. 
 * If this signal is not set to a value other than 0, this signal will not be transfered. In addition, when all signals of a 
 * message are 0, the message itself becomses 0 and will not be tranferred. 
 * The subscriber would not recognize this behaviour. Take care about this during implementation.
 * Also, keep your attention on signal ranges with a 0 as a valid value. 
 */
 
syntax = "proto3";

package UXDC.DRVM;




message CameraDeviceInfo
{
  string VendorName     = 1;
  string ModelName      = 2;
  string FullName       = 3;
  string FriendlyName   = 4;
  string DeviceFactory  = 5;
  string SerialNumber   = 6;
  string DeviceGUID     = 7;
}
message ImageSettings
{
  double Gain_DB              = 1;
  double Gain_LowerLimit      = 2;
  double Gain_UpperLimit      = 3;
  string GainAuto             = 4;
  double Gamma                = 5;
  double Brightness           = 6;
  double Contrast             = 7;
  double Balanceratio         = 8;
  string LightPreset          = 9;
  string PixelFormat          = 10;
  double Exposure_us          = 11;
  double Exposure_LowerLimit  = 12;
  double Exposure_UpperLimit  = 13;
  string ExposureMode         = 14;
  string ExposureAuto         = 15;
}
message SensorSettings
{
  int64 Sensor_Width          = 1;
  int64 Sensor_Height         = 2;
  int64 Sensor_ROI_WidthMax   = 3;
  int64 Sensor_ROI_HeightMax  = 4;
  int64 ROI_Width             = 5;
  int64 ROI_Height            = 6;
  int64 ROI_OffsetX           = 7;
  int64 ROI_OffsetY           = 8;
  string UsbSpeed             = 9;
  int64 Linkspeed_bps         = 10;
  int64 Speedlimit_Bps        = 11;
  double FPS_Limit            = 12; 
}

message GrabbedImage
{
  int64 Size_x            = 1;
  int64 Size_y            = 2;
  bool Reverse_x          = 3;
  bool Reverse_y          = 4;
  string Compression      = 5;
  double FPS_actual       = 6;
  int64 Framenumber       = 7;
  int64 ImageSize         = 8;
  int64 Timestamp         = 9;
  bytes Payload           = 10;
}



message DRVM_Status
{
  uint32 alive_counter = 1;
}

message DRVM_VideoStream
{
  CameraDeviceInfo mDeviceInfo    = 1;
  ImageSettings mImageSettings    = 2;
  SensorSettings mSensorSettings  = 3;
  GrabbedImage mGrabbedImage      = 4;  
}
